# locator

./: .gitignore  CMakeLists.txt  README.md
api/matlab/: example_usage.m  example_usage.m~  labeler.m  loc_addcat.m  loc_api.cpp  loc_api.cpp~  loc_api.hpp  loc_api.hpp~  loc_api.mexmaci64  loc_api.mexw64  loc_append.m  loc_build.m  loc_buildall.m  loc_clear.m  loc_collapsecat.m  loc_combs.m  loc_copy.m  loc_count.m  loc_create.m  loc_destroy.m  loc_disp.m  loc_empty.m  loc_eq.m  loc_fillcat.m  loc_find.m  loc_findall.m  loc_from.m  loc_from.m~  loc_fullcat.m  loc_getcats.m  loc_getexample.m  loc_getlabs.m  loc_hascat.m  loc_haslab.m  loc_incat.m  loc_instances.m  loc_isempty.m  loc_isloc.m  loc_keep.m  loc_mex_helpers.cpp  (+26 more)
api/matlab/compare/: compare_func_classdef.m  loc_findall_categorical.m
api/matlab/data/: example_struct.mat
api/matlab/example/: example_makelabs.m  example_vs_categorical.m  example_vs_categorical2.m  example_vs_categorical3.m  example_vs_categorical4.m
api/matlab/test/: loc_profile_add_label.cpp  loc_profile_add_label.mexmaci64  loc_profile_find.cpp  loc_profile_find.mexmaci64  loc_profile_run_add_label.m  loc_profile_run_find.m  loc_test_append.m  loc_test_append_random.m  loc_test_assert_depends_present.m  loc_test_combs.m  loc_test_destroy_new.m  loc_test_eq.m  loc_test_eq_several.m  loc_test_findall.m  loc_test_from.m  loc_test_fullcat.m  loc_test_isfullcat.m  loc_test_keep.m  loc_test_keep_one.m  loc_test_keepeach.m  loc_test_labeler_append.m  loc_test_pipeline.m  loc_test_resize.m  loc_test_run.m  loc_test_setcat_mult.m  loc_test_setcat_mult2.m  loc_test_struct.m  loc_test_util_print_ok.m
bit_array/: CMakeLists.txt
bit_array/src/: bit_array.cpp  bit_array.hpp
bit_array/test/: main.cpp
compare/: compare_sp.m  compare_vec.m
dynamic_array/: CMakeLists.txt
dynamic_array/include/: dynamic_array.hpp
dynamic_array/test/: main.cpp
include/: locator.hpp
lib/: locator.lib
locator/: CMakeLists.txt
locator/src/: bit_array.cpp  locator.cpp  locator.hpp
locator/test/: main.cpp
src/: allocators.hpp  binary_search.hpp  bit_array.cpp  bit_array.hpp  bsearch.hpp  config.hpp  dynamic_array.hpp  locator.cpp  locator.hpp  multimap.hpp  profile.cpp  profile.hpp  quick_sort.hpp  search.hpp  utilities.hpp
test/: bit_array.cpp  dynamic_array.cpp  locator.cpp  multimap.cpp  utilities.cpp
utilities/: CMakeLists.txt
utilities/src/: bsearch.hpp
utilities/test/: main.cpp
